# VulkanWorkspace

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  readme.md  vcpkg-configuration.json  vcpkg.json
chunk_compression_testing/: CMakeLists.txt  main.cpp
cmake/: VkShaderBuildFunctions.cmake
cudaexample/: CMakeLists.txt  cudaexample.cu  radixsort.cu  radixsort.cuh
gul/: CMakeLists.txt
gul/gul/: bitmask.cpp  bitmask.h  collision.cpp  collision.h  firstpersoncamera.cpp  firstpersoncamera.h  geometry.cpp  geometry.h  glfwwindow.cpp  glfwwindow.h  imguirenderer.cpp  imguirenderer.h  kdtree.cpp  kdtree.h  stbimage.cpp  stbimage.h
gul/gul/noise/: fbm.cpp  fbm.h  opensimplex.cpp  opensimplex.h
hlspv_lang/: CMakeLists.txt  astprinter.cpp  astprinter.h  code_generation.cpp  code_generation.h  ebnf_ast_printer.cpp  ebnf_ast_printer.h  ebnf_code_gen.cpp  ebnf_code_gen.h  ebnf_expr.cpp  ebnf_expr.h  ebnf_parse.cpp  ebnf_parse.h  ebnf_parser_gen.cpp  ebnf_parser_gen.h  ebnf_scan.cpp  ebnf_scan.h  ebnf_semantics.cpp  ebnf_semantics.h  ebnf_token.cpp  ebnf_token.h  ebnf_token_type.cpp  ebnf_token_type.h  expression.cpp  expression.h  lang_expr.cpp  lang_expr.h  lang_expr_type.cpp  lang_expr_type.h  lang_peg.txt  lang_scan.cpp  lang_scan.h  lang_token_type.cpp  lang_token_type.h  lexeme_view.cpp  lexeme_view.h  main.cpp  memoizationstate.h  parse.cpp  parse.h  (+11 more)
openaltest/: CMakeLists.txt  main.cpp  openal_auxilary_effects_slots.cpp  openal_auxilary_effects_slots.h  openal_bool.h  openal_buffer.cpp  openal_buffer.h  openal_context.cpp  openal_context.h  openal_context_attribute_builder.cpp  openal_context_attribute_builder.h  openal_device.cpp  openal_device.h  openal_effect.cpp  openal_effect.h  openal_listener.cpp  openal_listener.h  openal_source.cpp  openal_source.h  openal_util.cpp  openal_util.h
openaltest/openal/: al.cpp  al.h  alc.cpp  alc.h  utils.cpp  utils.h
uul/: CMakeLists.txt
uul/uul/: aliasmethod.h  array.h  assert.cpp  assert.h  bit.h  char.h  concepts.h  constexprmap.h  container.h  enumflags.h  enumflagsfwd.h  enumtraits.h  functional.h  indexing.h  math.h  sortingnetworks.h  string.cpp  string.h  tempproxy.h  typename.h  unreachable.h  variant.h
vul/: CMakeLists.txt
vul/sources/vul/: bool32.cpp  bool32.h  buffer.cpp  buffer.h  buffermemorybarrier.cpp  buffermemorybarrier.h  colorformatutils.cpp  colorformatutils.h  commandbuffer.cpp  commandbuffer.h  commandpool.cpp  commandpool.h  commandutils.cpp  commandutils.h  computepipeline.cpp  computepipeline.h  containerutils.cpp  containerutils.h  debugutils.cpp  debugutils.h  dependencyinfo.cpp  dependencyinfo.h  descriptorpool.cpp  descriptorpool.h  descriptorset.cpp  descriptorset.h  descriptorsetlayout.cpp  descriptorsetlayout.h  device.cpp  device.h  deviceaddress.cpp  deviceaddress.h  expectedresult.cpp  expectedresult.h  extensionfunctions.cpp  extensionfunctions.h  framebuffer.cpp  framebuffer.h  graphicspipeline.cpp  graphicspipeline.h  (+84 more)
vuladdexample/: CMakeLists.txt  main.cpp
vuladdexample/shaders/: add.comp
vulantworld/: CMakeLists.txt  gridworld.h  main.cpp
vulbreakout/: CMakeLists.txt  game_state.cpp  game_state.h  main.cpp  pga.h  sprite_2d_rendering.cpp  sprite_2d_rendering.h
vulbreakout/shaders/: brush_utils.glsl  pre_process_updated_brush_strokes.comp  render_fullscreen_texture.frag  render_grid_sprites_2d.frag  render_grid_sprites_2d.vert  render_sprites_2d.frag  render_sprites_2d.vert  render_sprites_2d_interp_transform.frag  render_sprites_2d_interp_transform.vert  render_updated_brush_strokes.comp  stylus_utils.glsl  tile_utils.glsl  utils_sprite_2d.glsl
vulclouds/: CMakeLists.txt  bvh.cpp  main.cpp
vulclouds/shaders/: cloudmarch.comp  fullscreen.frag  fullscreen.frag.d  lbm2d.comp  lbm2d_test.frag  lbm2d_test.vert  raytrace.comp.d  raytracingutils.glsl
vulgenerated/: CMakeLists.txt  casestrings.cpp  casestrings.h  codegenutils.cpp  codegenutils.h  enumcodegen.cpp  enumcodegen.h  enuminfo.cpp  enuminfo.h  featurecodegen.cpp  featurecodegen.h  main.cpp  vknameutils.cpp  vknameutils.h
vulgridworld/: CMakeLists.txt  gridworld.cpp  main.cpp
vulgridworld/shaders/: fullscreen.frag
vullbm2d/: CMakeLists.txt  lbmcpu.cpp  lbmcpu.h  main.cpp
vullbm2d/shaders/: lbm2d.comp  lbm2d_test.frag  lbm2d_test.vert
vullbm2dcpu/: CMakeLists.txt  bitmask.cpp  lbmcpu.cpp  lbmcpu.h  main.cpp
vullbm2dcpu/shaders/: lbm2dcpu.comp  lbm2dcpu_test.frag
vullifeengine/: CMakeLists.txt  lifeenginegrid.cpp  lifeenginegrid.h  main.cpp
vullifeengine/shaders/: antkernel.comp  fullscreen.frag  fullscreen.vert
vulpaint/: CMakeLists.txt  main.cpp
vulpaint/shaders/: bitcast.glsl  blend_utils.glsl  brush_utils.glsl  compose_layers.comp  connected_component_utils.glsl  layer_utils.glsl  pre_process_updated_brush_strokes.comp  render_fullscreen_texture.vert  render_updated_brush_strokes.comp  tile_utils.glsl
vulpaint/shaders/connected_components/: block_label.comp
vulparsetest/: CMakeLists.txt  main.cpp
vulparsetest/shaders/: rle_render.vert  rle_render2.vert
vulraytracingweekend/: CMakeLists.txt  bitmask.h  bvh.cpp  bvh.h  main.cpp
vulraytracingweekend/shaders/: fullscreen.frag  fullscreen.vert  lbm2d.comp  lbm2d_test.frag  lbm2d_test.vert  raytrace.comp  raytracingutils.glsl
vultest/: CMakeLists.txt  bitmask.cpp  main.cpp
vultest/shaders/: lbm2d.comp  lbm2d_test.frag
vultext/: CMakeLists.txt  main.cpp
vultext/shaders/: cloudmarch.comp  comp.spv  fullscreen.frag  fullscreen.vert.d  gen_quad_2d.vert  sdf_quad_render.frag
vulvoxel/: CMakeLists.txt  chunkmanagement.cpp  chunkmanagement.h  chunks.cpp  chunks.h  cpu_bitmask_intersect.cpp  cpu_bitmask_intersect.h  depthpassinfo.cpp  depthpassinfo.h  main.cpp  raytrace_bitfield_renderer.cpp  raytrace_bitfield_renderer.h
vulvoxel/shaders/: chunk_render_utils.glsl  deferred_rle_render.frag  deferred_rle_render.vert  fullscreen.vert  fullscreenr32f.frag  fullscreenr32f.vert  jfa_init.comp  jfa_iteration.comp  prefix_sum.comp  radixsort.comp  raytrace_bitfield.comp  rle_render.frag  rle_render.vert
(+41 files in other folders)
